@@ -1,6 +1,6 @@
 module Jekyll
 
-  class Converter < Extension
+  class Converter < Plugin
     # Public: Get or set the pygments prefix. When an argument is specified,
     # the prefix will be set. If no argument is specified, the current prefix
     # will be returned.
